--- a/services/consulting_and_advisory.html
+++ b/services/consulting_and_advisory.html
@@ -454,15 +454,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/custom_software.html">Custom Software Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="custom_software.html">Custom Software Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Consulting and Advisory</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/managed_services.html">Managed Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/data_and_analytics.html">Data and Analytics</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/digital_transformation.html">Digital Transformation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/cybersecurity.html">Cybersecurity</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/training_and_support.html">Training and Support</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services/emerging_technologies.html">Emerging Technologies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="managed_services.html">Managed Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data_and_analytics.html">Data and Analytics</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="digital_transformation.html">Digital Transformation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity.html">Cybersecurity</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="training_and_support.html">Training and Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="emerging_technologies.html">Emerging Technologies</a></li>
             </ul>
           </div>
 
@@ -491,10 +491,10 @@
         <span>Registered in the Kingdom of Eswatini</span>.
       </div>
       <div class="credits">
-        <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-        <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-        <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-        <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+        <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+        <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+        <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
       </div>
     </div>
   </footer>
