--- a/services/consulting_and_advisory.html
+++ b/services/consulting_and_advisory.html
@@ -41,10 +41,9 @@
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i
+        <a href="https://www.linkedin.com/company/linespacesoftware/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
-        <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i
-            class="bx bxl-twitter"></i></a>
+        <a href="https://x.com/linespacesoft" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank"
           class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i
