--- a/services/consulting_and_advisory.html
+++ b/services/consulting_and_advisory.html
@@ -394,25 +394,25 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6">
             <div class="info-box mb-4">
-              <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
-              <p>Remote</p>
+              <i class="bx bx-envelope"></i>
+              <h3>Email</h3>
+              <p><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>info@linespacesoftware.com</p>
+              <h3>Call</h3>
+              <p><a href="tel:+268-7683-6426">+268-7683-6426</a> | <a href="tel:+268-7943-5667">+268-7943-5667</a></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p><a href="tel:+268-7683-6426">+268-7683-6426</a>, <a href="tel:+268-7943-5667">+268-7943-5667</a></p>
+              <i class="bx bx-chat"></i>
+              <h3>Chat</h3>
+              <p><a href="https://wa.me/26879255469">+268-7925-5469</a></p>
             </div>
           </div>
 
@@ -455,6 +455,7 @@
       </div>
     </section>
     <!-- End Contact Section -->
+
   </main>
   <!-- End #main -->
 
